@@ -18,6 +18,7 @@ compileTestJava.options.encoding = "UTF-8"
 
 dependencies {
     implementation project(":common")
+    implementation 'com.jfoenix:jfoenix:9.0.10'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
     implementation group: 'com.google.inject', name: 'guice', version: '5.0.1'
     implementation "com.gluonhq:charm-glisten:6.0.6"
@@ -31,4 +32,50 @@ dependencies {
 javafx {
     version = '16'
     modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+def args = [
+        "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+        "--illegal-access=warn",
+        "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+        "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+        //the next line changes everything.
+        "--add-opens=java.base/java.lang.reflect=com.jfoenix",
+
+        "--add-exports=javafx.controls/javafx.scene.control.skin=com.jfoenix",
+        "--add-exports=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-exports=java.base/java.lang.reflect=com.jfoenix",
+        "--add-exports=javafx.controls/com.Sun.javafx.scene.control.behavior=com.jfoenix",
+        "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+
+        "--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
+
+        "--add-exports=javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" +
+                "=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior" +
+                "=com.jfoenix",
+        "--add-exports=javafx.controls/com.sun.javafx.binding=com.jfoenix",
+        "--illegal-access=warn",
+        "--add-opens=javafx.controls/javafx.scene.control.skin=com.jfoenix",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+        "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+        "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+        "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix",
+
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+        "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+        "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+        "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+        "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix"
+]
+run {
+    jvmArgs = args
 }
